[fix] Fixes BC PLP widget covering item rating

--- a/src/shared/shared.css
+++ b/src/shared/shared.css
@@ -31,13 +31,13 @@
   width: calc(100% - 35px);
 }
 
-/* BC PL enbiggener */
+/* BC PLI enbiggener */
 
 .product.ui-product-listing .ui-pl-placeholder {
-  padding-top: 105%;
+  padding-bottom: 85px;
   margin-top: 0;
 }
 
 .ui-product-listing .ui-pl-link .ui-pl-img {
-  padding-top: 40px;
+  padding-top: 30px;
 }
